--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -31,6 +31,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+          cache: 'pip'
+
+      - uses: actions/cache@v2
+        with:
+          path: '~/crawler-state.pickle'
+          key: '${{runner.os}}-crawler-state'
 
       - name: 'Install dependencies'
         run: sudo apt-get install -y chromium-browser chromium-chromedriver
@@ -49,4 +55,6 @@ jobs:
           python -m tickergadse \
             --git-repo 'https://github.com/basislagerservices/data.git' \
             --git-subdir ranking \
-            --once
+            --once \
+            --continue \
+            --state-file '~/crawler-state.pickle'
