--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -46,12 +46,12 @@ jobs:
           git config --global user.email 'services@basislager.fun'
           git config --global url.'https://${{secrets.REPO_TOKEN}}:@github.com/'.insteadOf 'https://github.com/'
 
-      - name: 'Setup Python'
-        run: pip install -r requirements.txt
+      - name: 'Install package'
+        run: pip install .
 
       - name: 'Run crawler'
         run: |
-          python -m tickergadse \
+          tickergadse-crawler \
             --git-repo 'https://github.com/basislagerservices/data.git' \
             --git-subdir ranking \
             --once \
