--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -15,15 +15,15 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-name: Crawler
+name: Book
 on:
   schedule:
-    - cron: '30 2,14 * * *'
+    - cron: '30 3,15 * * *'
   workflow_dispatch:
 
 jobs:
-  crawler:
-    name: 'Run crawler and push results'
+  book:
+    name: 'Generate book and push results'
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -31,16 +31,15 @@ jobs:
         with:
           python-version: '3.10'
 
-      - uses: actions/cache@v2
-        with:
-          path: '~/crawler-state.pickle'
-          key: '${{runner.os}}-crawler-state-v${{secrets.CACHE_VERSION}}'
-
       - name: 'Install dependencies'
         run: |
           sudo apt-get install -y \
             chromium-browser \
-            chromium-chromedriver
+            chromium-chromedriver \
+            pandoc \
+            texlive-latex-base \
+            texlive-latex-extra \
+            texlive-latex-recommended
 
       - name: 'Configure Git'
         run: |
@@ -51,11 +50,9 @@ jobs:
       - name: 'Install package'
         run: pip install .
 
-      - name: 'Run crawler'
+      - name: 'Run book generator'
         run: |
-          tickergadse-crawler \
+          tickergadse-book \
             --git-repo 'https://github.com/basislagerservices/data.git' \
-            --git-subdir ranking \
-            --once \
-            --continue \
-            --state-file '~/crawler-state.pickle'
+            --output book/logbook.pdf \
+            --output book/logbook.epub
