--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -36,10 +36,12 @@ jobs:
           sudo apt-get install -y \
             chromium-browser \
             chromium-chromedriver \
-            pandoc \
+            curl \
             texlive-latex-base \
             texlive-latex-extra \
             texlive-latex-recommended
+          curl -L -o /tmp/pandoc.deb 'https://github.com/jgm/pandoc/releases/download/2.16.2/pandoc-2.16.2-1-amd64.deb'
+          sudo dpkg -i /tmp/pandoc.deb
 
       - name: 'Configure Git'
         run: |
