Allow restoring from incomplete or overcomplete states
This should allow adding more tickers while continuing from the current
saved state.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ select = B,C,E,F,W,T4,B9,D,M,I
 application-import-names = tickergadse
 
 [tool:pytest]
+asyncio_mode=auto
 filterwarnings =
     ignore:"@coroutine" decorator is deprecated
     ignore:find_elements_by_\* commands are deprecated. Please use find_elements()
