--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: '~/crawler-state.pickle'
-          key: '${{runner.os}}-crawler-state-v${{secrets.CACHE_VERSION}}'
+          key: '${{runner.os}}-crawler-state-${{secrets.CACHE_VERSION}}'
 
       - name: 'Install dependencies'
         run: |
