--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-dst-client@git+https://github.com/basislagerservices/dst-client.git
+dst-client@git+https://github.com/basislagerservices/dst-client.git@47180a4
 aiohttp
 python-dateutil
 pytz
